Added basic calculator functoinality (incomplete, w/ errors)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div id="container">
         <div id="display">1234</div>
-        <div id="clear">AC</div>
-        <div id="backspace">back</div>
+        <div class="clear clearAll">AC</div>
+        <div class="clear back">back</div>
         <div class="operators divide">/</div>
         <div class="nums">9</div>
         <div class="nums">8</div>
@@ -29,7 +29,8 @@
         <div class="operators add">+</div>
         <div class="nums zero">0</div>
         <div class="dot">.</div>
-        <div class="operators equality">=</div>
+        <div class="equality">=</div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
