--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="container">
-        <div id="display">1234</div>
-        <div class="clear clearAll">AC</div>
-        <div class="clear back">back</div>
-        <div class="operators divide">/</div>
-        <div class="nums">9</div>
-        <div class="nums">8</div>
-        <div class="nums">7</div>
-        <div class="operators multiply">*</div>
-        <div class="nums">6</div>
-        <div class="nums">5</div>
-        <div class="nums">4</div>
-        <div class="operators subtract">-</div>
-        <div class="nums">3</div>
-        <div class="nums">2</div>
-        <div class="nums">1</div>
-        <div class="operators add">+</div>
-        <div class="nums zero">0</div>
-        <div class="dot">.</div>
-        <div class="equality">=</div>
+    <div id="wideContainer">
+        <div id="container">
+            <div id="display"></div>
+            <div class="clear clearAll">AC</div>
+            <div class="clear back">back</div>
+            <div class="operators divide">/</div>
+            <div class="nums">9</div>
+            <div class="nums">8</div>
+            <div class="nums">7</div>
+            <div class="operators multiply">*</div>
+            <div class="nums">6</div>
+            <div class="nums">5</div>
+            <div class="nums">4</div>
+            <div class="operators subtract">-</div>
+            <div class="nums">3</div>
+            <div class="nums">2</div>
+            <div class="nums">1</div>
+            <div class="operators add">+</div>
+            <div class="nums zero">0</div>
+            <div class="dot">.</div>
+            <div class="equality">=</div>
+        </div>
     </div>
+    <p></p>
+    
     <script src="script.js"></script>
 </body>
 </html>
